# ChangeLog for dev-perl/Devel-NYTProf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-NYTProf/ChangeLog,v 1.5 2010/06/12 12:50:39 tove Exp $

*Devel-NYTProf-4.00 (12 Jun 2010)

  12 Jun 2010; Torsten Veller <tove@gentoo.org> +Devel-NYTProf-4.00.ebuild:
  Version bump

  09 Apr 2010; Torsten Veller <tove@gentoo.org> -Devel-NYTProf-3.01.ebuild,
  -Devel-NYTProf-3.02.ebuild:
  Cleanup

*Devel-NYTProf-3.11 (17 Mar 2010)

  17 Mar 2010; Torsten Veller <tove@gentoo.org> +Devel-NYTProf-3.11.ebuild:
  Version bump

*Devel-NYTProf-3.02 (05 Mar 2010)

  05 Mar 2010; Torsten Veller <tove@gentoo.org> +Devel-NYTProf-3.02.ebuild:
  Version bump

  12 Jan 2010; Torsten Veller <tove@gentoo.org> +Devel-NYTProf-3.01.ebuild,
  +metadata.xml:
  Import from perl-experimental

  29 Dec 2009; Kent Fredric <kentfredric@gmail.com>
  -Devel-NYTProf-2.09.ebuild:
  Gone on CPAN

*Devel-NYTProf-3.01 (29 Dec 2009)

  29 Dec 2009; Kent Fredric <kentfredric@gmail.com>
  Devel-NYTProf-2.09.ebuild, Devel-NYTProf-2.10.ebuild,
  +Devel-NYTProf-3.01.ebuild:
  Version Bumped ( NB: Currently fails tests ) and fixed some QA errors.

  27 Aug 2009; Kent Fredric <kentfredric@gmail.com>
  Devel-NYTProf-2.10.ebuild:
  Fixed an IUSE 

*Devel-NYTProf-2.10 (25 Aug 2009)

  25 Aug 2009; Kent Fredric <kentfredric@gmail.com>
  +Devel-NYTProf-2.10.ebuild:
  Bumped. Be sure to check out the new KCacheGrind producer :D 

*Devel-NYTProf-2.09 (01 Apr 2009)

  01 Apr 2009; Kent Fredric<kentfredric@gmail.com> +metadata.xml,
  +Devel-NYTProf-2.09.ebuild:
  Its a travesty this hasn't been add sooner. It currently drops a few files
  on the host FS I'm not sure should be there, benchmark.pl and perftest.pl,
  but its not super-deadly.
