@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST Devel-NYTProf-3.11.tar.gz 392833 RMD160 0f308f23f4289008c6f117339869822a16ab1255 SHA1 3a2abf9969b674eabcdee4020a66f8176c40898d SHA256 a7060bc47432d5d8da26169eecb1b4a6a632f4870b14b0bd3fb6c2a34b5cf45d
 DIST Devel-NYTProf-4.00.tar.gz 403808 RMD160 6ddab349eb7404122adbf020114e3ce2c8972137 SHA1 40c171b492ca2e9d9ae7668843aeeee73dcd7f1e SHA256 cab57257819c340e2f13eb4c766bf55cac6bc784c11f9872b44cf6bbddad3675
+DIST Devel-NYTProf-4.01.tar.gz 403979 RMD160 f46727da878f29bd35102a8e6d13efd39989651a SHA1 def9869c5ff853e65708bf2b7447f9b3e5c75311 SHA256 e8b37635d2999cf4804a6a33448f999317e9c51014135c01baab685a6d7302ef
 EBUILD Devel-NYTProf-3.11.ebuild 580 RMD160 60c7bbdc8c9ccbf430b1f6326b27fb0f1d4a5f76 SHA1 9fa06a175ee285ae455775e50cc59e31fdff933f SHA256 e1b9a769d9f4d4ecb3eaed61ae7e899b7093b47a3c199b65b1f9d7da6d1cadf2
 EBUILD Devel-NYTProf-4.00.ebuild 580 RMD160 72c20818b87de0c303ddb7889f47ae97fc43b8a6 SHA1 f92370d555c3e3e253ce455890f76a1eaeabf685 SHA256 f168f391487d92d29b8156c67df723936faa3ee15086b5722d152f1462065185
-MISC ChangeLog 1779 RMD160 e9ede596795d1fc03cc134bfd41942fea09c2edf SHA1 dc5ac1f0e1407539c4fc2cc781bad17fef6c891a SHA256 86a2948bc267c5ff9a7930e2684cd46574d92ca24824c94f0faaa1969b6099dc
+EBUILD Devel-NYTProf-4.01.ebuild 580 RMD160 78d7c2154db8a107fa513580fbbf16ef2b18092a SHA1 8931aab0f62021f05961e8b734c92d30b6516a8f SHA256 fab583891888be1eec93a8008e741cad01ccbe44c4563006d87000d1bda1d5e8
+MISC ChangeLog 1906 RMD160 db2d28db58dd42a8dcadc66c431b900b95d2cd0b SHA1 a738490c8d98b9cc452f7957bb425a000bf880b4 SHA256 d0a7fdc6d2d4bddfdd1ef8e02c964c64e1ba070e4f24fa69a89dac9b3f05684c
 MISC metadata.xml 161 RMD160 c312c9f6ec7017036d80c2d0cc39105488b5811e SHA1 04aaf1e428a1c7b87d403aec706d0d9e0faf7132 SHA256 03133f1c99f9897289d97dc74a0ccc9b0a8138838507982422de997be1910a54
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwTgqQACgkQV3J2n04EauwLLgCdGEqWZa/qI0SbZ1TCTqNuy0eg
-JM0An23gO8OFg1se6goH/7D3tx5h1IqZ
-=o13U
+iEYEARECAAYFAkwYdMwACgkQV3J2n04Eaux69ACgpYLmwPsWCSOrVei6OkNJkcdC
+/d4AmgLQ+l9YnGNiPNiFLJIS+3Jw40WY
+=z4lG
 -----END PGP SIGNATURE-----
