@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Devel-NYTProf
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-NYTProf/ChangeLog,v 1.5 2010/06/12 12:50:39 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-NYTProf/ChangeLog,v 1.6 2010/06/16 06:52:54 tove Exp $
+
+*Devel-NYTProf-4.01 (16 Jun 2010)
+
+  16 Jun 2010; Torsten Veller <tove@gentoo.org> +Devel-NYTProf-4.01.ebuild:
+  Version bump
 
 *Devel-NYTProf-4.00 (12 Jun 2010)
 
